# test_opencv_mp

./: CMakeLists.txt  main.cpp
